Signed-off-by: unknown <adajiahtwatson@gmail.com>

--- a/app/src/main/res/layout/fragment_lend.xml
+++ b/app/src/main/res/layout/fragment_lend.xml
@@ -37,6 +37,7 @@
         android:layout_width="409dp"
         android:layout_height="541dp"
         style="@style/CardView"
+        android:layoutAnimation="@anim/anim"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
