--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/borrow"
         android:title="Borrow" />
     <item
-        android:id="@+id/len"
+        android:id="@+id/lend_page"
         android:icon="@drawable/lending"
         android:title="Lend" />
 
