--- a/app/src/main/res/layout/fragment_items.xml
+++ b/app/src/main/res/layout/fragment_items.xml
@@ -25,16 +25,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        style="@style/CardView"
-        android:layout_width="380dp"
-        android:layout_height="194dp"
+        style="@style/ListView"
+        android:layout_width="match_parent"
+        android:layout_height="256dp"
+        android:padding="5pt"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="48dp"
-        android:layout_marginBottom="417dp"
+        android:layout_marginBottom="427dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
