--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -80,4 +80,12 @@ tools:context=".ui.home.HomeFragment">
         android:gravity="center"
         tools:ignore="RtlCompat" />
 </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:paddingTop="10pt"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Swipe top and right to go to Borrow\nSwipe top and right to go to Lend"
+        android:textStyle="bold" />
 </LinearLayout>
