--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,6 @@
         <item name="android:dividerHeight">0dp</item>
         <item name="android:listSelector">@drawable/list_item_selector</item>
     </style>
+
+    <style name="Theme_AlertDialog"></style>
 </resources>
