--- a/app/src/main/res/layout/fragment_items.xml
+++ b/app/src/main/res/layout/fragment_items.xml
@@ -24,11 +24,11 @@
         android:textSize="10pt"
         android:textStyle="bold" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <ListView
+        android:id="@+id/item_list"
         style="@style/ListView"
         android:layout_width="match_parent"
-        android:layout_height="256dp"
+        android:layout_height="wrap_content"
         android:padding="5pt"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
