--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -7,16 +7,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5pt"
-        app:cardElevation="10dp"
+        app:cardElevation="3dp"
         app:cardCornerRadius="2dp"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         app:cardBackgroundColor="@color/white"
-        app:cardMaxElevation="12dp"
+        app:cardMaxElevation="1dp"
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true"
         >
         <LinearLayout
             android:layout_width="match_parent"
+            android:padding="5pt"
             android:layout_height="wrap_content">
     <TextView
         android:id="@+id/sender"
