--- a/app/src/main/res/layout/fragment_lend.xml
+++ b/app/src/main/res/layout/fragment_lend.xml
@@ -11,9 +11,10 @@
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/textView21"
-            android:layout_width="415dp"
-            android:layout_height="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="Lending Page"
+            android:textStyle="bold"
             android:textSize="14pt"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -25,7 +26,7 @@
 
         <TextView
             android:id="@+id/textView31"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Categories"
             android:textSize="12pt"
@@ -36,16 +37,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.076" />
+
         <ListView
             android:id="@+id/my_list_view2"
-            android:layout_width="409dp"
-            android:layout_height="541dp"
-            style="@style/CardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.5" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.facebook.shimmer.ShimmerFrameLayout>
