--- a/app/src/main/res/layout/category_list_row.xml
+++ b/app/src/main/res/layout/category_list_row.xml
@@ -21,6 +21,7 @@
             android:id="@+id/category_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/md_black_1000"
             android:layout_weight="1"
             android:text="TextView" />
     </LinearLayout>
