--- a/app/src/main/res/layout/fragment_confirmation.xml
+++ b/app/src/main/res/layout/fragment_confirmation.xml
@@ -27,6 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:text="Thank you for using LendMe, Sarah! "
+
+        android:textColor="@color/md_black_1000"
         android:textStyle="bold"
         android:textSize="9pt"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,6 +44,7 @@
         android:layout_height="wrap_content"
         android:text="You and the lender will meet at the agreed location on July 1st, 2020 at 5:30 PM CST. "
         android:textSize="10pt"
+        android:textColor="@color/md_black_1000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +57,7 @@
         android:layout_height="wrap_content"
         android:text="You must return 'Ninja Professional 1000-Watt Blender by July 4th, 2022 by 5:30 PM CST to avoid late fees. "
         android:textSize="8pt"
+        android:textColor="@color/md_black_1000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.509"
@@ -67,6 +71,7 @@
         android:layout_height="wrap_content"
         android:text="This confirmation has also been sent to the email address used to create your account"
         android:textSize="9pt"
+        android:textColor="@color/md_black_1000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.44"
@@ -84,7 +89,7 @@
         app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/md_red_600"
+        android:textColor="@color/md_black_1000"
         style="@style/flat_button"
         app:layout_constraintVertical_bias="0.949" />
 
@@ -94,7 +99,7 @@
         android:layout_height="wrap_content"
         style="@style/flat_button"
         android:text="Confirm"
-        android:textColor="@color/color_primary"
+        android:textColor="@color/md_black_1000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.845"
