--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -8,7 +8,6 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         app:cardElevation="10dp"
         app:cardCornerRadius="20dp"
         android:layout_margin="1dp"
@@ -25,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Item Description"
+        android:textColor="@color/md_black_1000"
         android:textSize="11pt"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="title"
+        android:textColor="@color/md_black_1000"
         android:textSize="10pt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,6 +71,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/md_black_1000"
         app:layout_constraintVertical_bias="0.555" />
 
     <TextView
@@ -79,6 +81,7 @@
         android:text=""
         android:textSize="10pt"
         android:gravity="center"
+        android:textColor="@color/md_black_1000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.536"
