--- a/app/src/main/res/layout/item_list_row.xml
+++ b/app/src/main/res/layout/item_list_row.xml
@@ -38,11 +38,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="Title"
+                    android:textColor="@color/md_black_1000"
                     android:textSize="50sp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
+                    android:textColor="@color/md_black_1000"
                     android:id="@+id/location"/>
 
 
