--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,8 @@
         <item name="colorPrimary">@color/teal_200</item>
         <item name="colorPrimaryVariant">@color/md_teal_300</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColorSecondary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/md_amber_300</item>
         <item name="colorSecondaryVariant">@color/md_amber_200</item>
